# verdict

./: .gitignore  .secrets.baseline  AGENT.md  LICENSE  README.md  mint.json  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  security.yml  sync-docs.yml
docs/: cli.mdx  configuration.mdx  dataset.mdx  introduction.mdx  metrics.mdx  providers.mdx  quickstart.mdx
docs/api/: dataset.mdx  results.mdx  runner.mdx
examples/: basic_eval.py  custom_metric_eval.py  custom_metrics.py  fetch_gsm8k.py  gsm8k_sample.jsonl  judge_prompt.md  label_free_data.jsonl  label_free_eval.py  models.yaml  sample_data.jsonl
src/aevyra_verdict/: __init__.py  cli.py  dataset.py  results.py  runner.py
src/aevyra_verdict.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aevyra_verdict/metrics/: __init__.py  base.py  custom.py  judge.py  reference.py
src/aevyra_verdict/providers/: __init__.py  anthropic_provider.py  base.py  cohere_provider.py  google_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py
tests/: conftest.py  test_cli.py  test_dataset.py  test_integration.py  test_label_free.py  test_ollama.py  test_openai.py  test_openrouter.py  test_provider_imports.py  test_vllm.py
