[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aevyra-verdict"
version = "0.1.0"
description = "Benchmark any LLM against your data. Pick the best model, then make it better."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Aevyra AI" },
]
keywords = [
    "llm", "evals", "evaluation", "benchmarking", "llm-evaluation",
    "model-comparison", "openai", "anthropic", "ollama", "vllm",
    "rouge", "bleu", "llm-judge", "ai", "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rouge-score>=0.1.2",
    "nltk>=3.9.4",
    "pandas>=2.0",
    "tqdm>=4.67.3",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
aevyra-verdict = "aevyra_verdict.cli:main"

[project.optional-dependencies]
openai     = ["openai>=1.0"]
anthropic  = ["anthropic>=0.94.0"]
google     = ["google-genai>=1.0"]
mistral    = ["mistralai>=1.0"]
cohere     = ["cohere>=5.0"]
all        = [
    "openai>=1.0",
    "anthropic>=0.94.0",
    "google-genai>=1.0",
    "mistralai>=1.0",
    "cohere>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
